Fix the workflow

--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -2,7 +2,7 @@ name: Lint the code with Pylint
 run-name: This is the ${{ github.actor }} run name
 
 runs:
-  on: [push]
+  on: push
 
 jobs:
   lint-the-code:
