--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -1,5 +1,9 @@
-- name: PyLint with dynamic badge
-  uses: Silleellie/pylint-github-action@v2
+name: PyLint with dynamic badge
+on: push
+jobs:
+  pylint:
+    steps:
+    - uses: Silleellie/pylint-github-action@v2
             
 #name: PyLint
 #on: push
