--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -4,7 +4,7 @@ run-name: I am running the demo
 on: workflow_dispatch
 
 jobs:
-  My first job:
+  first_job:
     runs-on: ubuntu-latest
     steps:
       - name: Echo
