--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -16,16 +16,15 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
-
-    - name: Install selenium
-      run: pip install selenium
+        python-version: '3.8'
 
     - name: Visit app
-      run: >
-        python -c '
-        from selenium import webdriver;
-        driver = webdriver.Chrome();
-        driver.get("https://aidsorb-online.streamlit.app/");
-        driver.quit()
-        '
+      run: hello
+
+    my-job:
+      needs:
+        - keep-awake
+      steps:
+        run:
+          - echo Hello world
+          - echo $(python -m version)
