--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -18,13 +18,11 @@ jobs:
       with:
         python-version: '3.8'
 
-    - name: Visit app
-      run: hello
-
   my-job:
     runs-on: ubuntu-latest
     needs:
       - keep-awake
     steps:
-      - run: echo Hello world
+      - run: echo $(ls)
+      - run: echo $(pwd)
       - run: echo $(python -m version)
