--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -13,6 +13,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - run: pwd
+
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
