--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -1,12 +1,9 @@
-name: Keep AIdsorb-online awake
+name: Foo
 
-on: workflow_dispatch
-
-permissions:
-  contents: write
+on: push
 
 jobs:
-  keep-awake:
+  job1:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,11 +17,13 @@ jobs:
       with:
         python-version: '3.8'
 
-  my-job:
+  job2:
     runs-on: ubuntu-latest
     needs:
-      - keep-awake
+      - job1
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - run: ls
       - run: pwd
       - run: python --version
