--- a/.github/workflows/autocommit.yaml
+++ b/.github/workflows/autocommit.yaml
@@ -1,15 +1,32 @@
-name: Foo
-
 on:
   workflow_dispatch:
     inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
+      print_tags:
+        description: 'True to print to STDOUT'
+        required: true
+        type: boolean
       tags:
-        description: 'Tag to deploy'
+        description: 'Test scenario tags'
+        required: true
+        type: string
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
         required: true
 
 jobs:
-  deploy:
+  print-tag:
     runs-on: ubuntu-latest
+    if: ${{ inputs.print_tags }}
     steps:
-      - name: Print the tag
-        run: echo "Deploying tag: ${{ inputs.tags }}"
+      - name: Print the input tag to STDOUT
+        run: echo  "The tags are ${{ inputs.tags }}"
